Bug 343855 - Changing the "Copy Reference" command is not working
Summary: Changing the "Copy Reference" command is not working
Status: RESOLVED FIXED
Alias: None
Product: KBibTeX
Classification: Applications
Component: General (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Fischer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-06 09:44 UTC by Gandalf Lechner
Modified: 2015-02-09 16:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gandalf Lechner 2015-02-06 09:44:27 UTC
When I change the "Copy Reference" command in the settings to use "\cite{..}" and save that setting, kbibtex still uses "no command". Opening the settings again shows the preference is still "no command".

Reproducible: Always
Comment 1 Thomas Fischer 2015-02-06 17:49:37 UTC
Git commit 9cc11e306c245186df6e5de866f06d28c7352a76 by Thomas Fischer.
Committed on 06/02/2015 at 17:49.
Pushed by thomasfischer into branch 'master'.

'Copy Reference' setting in GUI correctly stored

This fix addresses bug 343855, where changes in the settings
dialog changing the 'copy reference' state where not correctly
stored and thus not used when invoking the 'copy reference'
command on selected entries in the main list.

M  +1    -1    src/gui/preferences/settingsfileexporterwidget.cpp

http://commits.kde.org/kbibtex/9cc11e306c245186df6e5de866f06d28c7352a76
Comment 2 Thomas Fischer 2015-02-06 17:49:51 UTC
Git commit 82797098fb76dd158e44772071eb9e3771ecdc2c by Thomas Fischer.
Committed on 06/02/2015 at 17:49.
Pushed by thomasfischer into branch 'kbibtex/0.6'.

'Copy Reference' setting in GUI correctly stored

This fix addresses bug 343855, where changes in the settings
dialog changing the 'copy reference' state where not correctly
stored and thus not used when invoking the 'copy reference'
command on selected entries in the main list.

M  +1    -1    src/gui/preferences/settingsfileexporterwidget.cpp

http://commits.kde.org/kbibtex/82797098fb76dd158e44772071eb9e3771ecdc2c
Comment 3 Thomas Fischer 2015-02-06 17:50:02 UTC
Git commit 1beff1897c91b2b79c76fddca28ca0a7d6ed2fc4 by Thomas Fischer.
Committed on 06/02/2015 at 17:49.
Pushed by thomasfischer into branch 'kbibtex/0.5'.

'Copy Reference' setting in GUI correctly stored

This fix addresses bug 343855, where changes in the settings
dialog changing the 'copy reference' state where not correctly
stored and thus not used when invoking the 'copy reference'
command on selected entries in the main list.

M  +1    -1    src/gui/preferences/settingsfileexporterwidget.cpp

http://commits.kde.org/kbibtex/1beff1897c91b2b79c76fddca28ca0a7d6ed2fc4
Comment 4 Gandalf Lechner 2015-02-09 16:55:21 UTC
Thanks, that was a quick fix!