'Copy Reference' setting in GUI correctly stored

This fix addresses bug 343855, where changes in the settings
dialog changing the 'copy reference' state where not correctly
stored and thus not used when invoking the 'copy reference'
command on selected entries in the main list.

BUG: 343855